src/objects/DTC_Application__c.object
<CustomObject>
    <description>The DTC Module object contains information regarding each application supported by the VA Salesforce platform.  Including the system owner, responsible for approving new user requests.</description>
    <label>DTC Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTC Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AE_Lead_Email__c</fullName>
        <label>AE Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AE_Lead_Name__c</fullName>
        <label>AE Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DTC Applications</relationshipLabel>
        <relationshipName>DTC_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Community_EA__c</fullName>
        <label>Actual Community EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_DrawLoop__c</fullName>
        <label>Actual DrawLoop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Einstein_Analytics__c</fullName>
        <label>Actual Einstein Analytics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Exam__c</fullName>
        <label>Actual Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Grid_Buddy__c</fullName>
        <label>Actual Grid Buddy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_KnowWho__c</fullName>
        <label>Actual KnowWho</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Platform_Normalized__c</fullName>
        <inlineHelpText>This is the number of unique users for this module subtracting out users accounted for larger modules like WATRS</inlineHelpText>
        <label>Actual Platform Normalized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SDOCs__c</fullName>
        <label>Actual SDOCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Service_Cloud_Normalized__c</fullName>
        <inlineHelpText>Number of Unique SC licenses not already consumed by a larger module (ex. Views)</inlineHelpText>
        <label>Actual Service Cloud Normalized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SpringCM__c</fullName>
        <label>Actual SpringCM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_community__c</fullName>
        <label>Actual Community</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_force__c</fullName>
        <label>Actual Platform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_service__c</fullName>
        <label>Actual Service Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actualcommunity_plus__c</fullName>
        <label>Actual Community Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <description>Textual description of the application</description>
        <inlineHelpText>A brief description of the application</inlineHelpText>
        <label>Application Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architect_Primary_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect Primary POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Line POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DTC_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <inlineHelpText>Please enter the agency (VHA, VBA, NCA, VACO, ect) then enter the Line of Business.</inlineHelpText>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractIntegrator__c</fullName>
        <label>Contract/Integrator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen Developers - VA Internal teams</fullName>
                </value>
                <value>
                    <fullName>BIP- Booze Allen Hamilton</fullName>
                    <label>MBMS/BIP - Booz Allen Hamilton</label>
                </value>
                <value>
                    <fullName>EXAM - MB&amp;A</fullName>
                    <label>ExAM - MB&amp;A</label>
                </value>
                <value>
                    <fullName>VALERI - Accenture</fullName>
                </value>
                <value>
                    <fullName>VBA COE - Accenture</fullName>
                </value>
                <value>
                    <fullName>VECMS - Acumen</fullName>
                </value>
                <value>
                    <fullName>Views - Liberty/Acumen</fullName>
                    <label>VIEWS - Liberty</label>
                </value>
                <value>
                    <fullName>DTC - B3/MB&amp;A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NA - in sustainment</fullName>
                    <label>N/A - in sustainment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deploy_Merge_Branch__c</fullName>
        <label>Deploy Merge Branch</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deploy_Symbol__c</fullName>
        <description>This symbol will be used for deployment activities to indicate which application a branch or package.xml is related to.</description>
        <inlineHelpText>This symbol will be used for deployment activities to indicate which application a branch or package.xml is related to.</inlineHelpText>
        <label>Deploy Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dest_Org_Ext__c</fullName>
        <label>Dest Org Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <label>Focus Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>NCA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VACO</fullName>
                </value>
                <value>
                    <fullName>VBA</fullName>
                </value>
                <value>
                    <fullName>VHA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Projected__c</fullName>
        <label>Go-Live Date Projected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_PII_PHI__c</fullName>
        <label>Has PII/PHI?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_to_Create_User_to_give_Access__c</fullName>
        <label>How to Create User to give Access</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hub_Org_Ext__c</fullName>
        <label>Hub Org Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Projected</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                    <label>Live - Active Development</label>
                </value>
                <value>
                    <fullName>Live - In Sustainment</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>N/A - not a true module</fullName>
                    <label>N/A (not a true module)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Licenses_in_Use__c</fullName>
        <label>No. of Licenses in Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_T_PM_Email__c</fullName>
        <label>OI&amp;T PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OI_T_PM_Name__c</fullName>
        <label>OI&amp;T PM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>VAEMCC</fullName>
                </value>
                <value>
                    <fullName>VAEMPL</fullName>
                </value>
                <value>
                    <fullName>VALOB</fullName>
                </value>
                <value>
                    <fullName>VAPM</fullName>
                </value>
                <value>
                    <fullName>VAVET</fullName>
                </value>
                <value>
                    <fullName>VHA-GOV</fullName>
                </value>
                <value>
                    <fullName>VACI</fullName>
                    <isActive>false</isActive>
                    <label>VACI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_User_Creation_Apex__c</fullName>
        <description>API Name for an apex script used to supplement user provisioning process</description>
        <label>Overall User Creation Apex</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_User_Creation_Flow__c</fullName>
        <description>API Name for a user flow used to supplement user provisioning process</description>
        <label>Overall User Creation Flow</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSF_Primary_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSF Primary POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSF_Secondary_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSF Secondary POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_DTC_Deployment_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary DTC Deployment Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_DTC_End_User_Support_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary DTC End User Support Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The VA approver associated with the application.  This person is responsible for the application and approving user requests to access</description>
        <inlineHelpText>The VA approver associated with this application.  Responsible for approving new user requests.</inlineHelpText>
        <label>Primary Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VA_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <description>Used to assign the profile to the user, when we create the flow.</description>
        <label>Profile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Community_EA__c</fullName>
        <label>Projected Community EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_DrawLoop__c</fullName>
        <label>Projected DrawLoop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Einstein_Analytics__c</fullName>
        <label>Projected Einstein Analutics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Exam__c</fullName>
        <label>Projected Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_GridBuddy__c</fullName>
        <label>Projected GridBuddy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_KnowWho__c</fullName>
        <label>Projected KnowWho</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Platform__c</fullName>
        <label>Projected Platform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_SDOCS__c</fullName>
        <label>Projected SDOCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_SpringCM__c</fullName>
        <label>Projected SpringCM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_community__c</fullName>
        <label>Projected Community</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_community_plus__c</fullName>
        <label>Projected Community Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_service_cloud__c</fullName>
        <label>Projected Service Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Details__c</fullName>
        <label>ROI Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Note: The secondary approver is for DTC awareness only (the person will have no approval role in the system)</inlineHelpText>
        <label>Secondary Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DTC Applications (Secondary Approver)</relationshipLabel>
        <relationshipName>DTC_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_DTC_Deployment_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary DTC Deployment Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_DTC_End_User_Support_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary DTC End User Support Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DTC_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra-Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UI_Format__c</fullName>
        <label>UI Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic Only</fullName>
                </value>
                <value>
                    <fullName>Lightning, with missing functionality in Classic</fullName>
                </value>
                <value>
                    <fullName>Lightning and Classic Available</fullName>
                </value>
                <value>
                    <fullName>Lightning Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_App_Owners</fullName>
        <columns>NAME</columns>
        <columns>Org__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Go_Live_Date_Projected__c</columns>
        <columns>Live_Status__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All App Owners</label>
    </listViews>
    <listViews>
        <fullName>All_Apps</fullName>
        <columns>NAME</columns>
        <columns>Application_Description__c</columns>
        <columns>Org__c</columns>
        <columns>Business_Line__c</columns>
        <columns>ContractIntegrator__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Implementation_Start_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>CF_Profile__c</columns>
        <columns>Profile_ID__c</columns>
        <columns>Secondary_Approver__c</columns>
        <columns>Size__c</columns>
        <columns>UI_Format__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Apps</label>
    </listViews>
    <listViews>
        <fullName>All_In_Retirement</fullName>
        <columns>NAME</columns>
        <columns>Product_Owner__c</columns>
        <columns>How_to_Create_User_to_give_Access__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Business_Line_POC__c</columns>
        <columns>ContractIntegrator__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Go_Live_Date_Projected__c</columns>
        <columns>Has_PII_PHI__c</columns>
        <columns>Live_Status__c</columns>
        <columns>Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Live_Status__c</field>
            <operation>equals</operation>
            <value>Retired</value>
        </filters>
        <label>All In Retirement</label>
    </listViews>
    <listViews>
        <fullName>All_with_Owner</fullName>
        <columns>Business_Line__c</columns>
        <columns>NAME</columns>
        <columns>Business_Line_POC__c</columns>
        <columns>ContractIntegrator__c</columns>
        <columns>OI_T_PM_Email__c</columns>
        <columns>OI_T_PM_Name__c</columns>
        <columns>PSF_Primary_POC__c</columns>
        <columns>PSF_Secondary_POC__c</columns>
        <columns>Architect_Primary_POC__c</columns>
        <columns>Primary_DTC_Deployment_Lead__c</columns>
        <columns>Primary_DTC_End_User_Support_Lead__c</columns>
        <columns>Secondary_DTC_Deployment_Lead__c</columns>
        <columns>Secondary_DTC_End_User_Support_Lead__c</columns>
        <columns>AE_Lead_Email__c</columns>
        <columns>AE_Lead_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Owner</label>
    </listViews>
    <listViews>
        <fullName>All_with_Sustainment</fullName>
        <columns>NAME</columns>
        <columns>Product_Owner__c</columns>
        <columns>How_to_Create_User_to_give_Access__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Business_Line_POC__c</columns>
        <columns>ContractIntegrator__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Go_Live_Date_Projected__c</columns>
        <columns>Has_PII_PHI__c</columns>
        <columns>Live_Status__c</columns>
        <columns>Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Live_Status__c</field>
            <operation>equals</operation>
            <value>Live - In Sustainment</value>
        </filters>
        <label>All with Sustainment</label>
    </listViews>
    <listViews>
        <fullName>Citizen_Developed</fullName>
        <columns>NAME</columns>
        <columns>Live_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Org__c</columns>
        <columns>Deploy_Symbol__c</columns>
        <columns>Deploy_Merge_Branch__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>How_to_Create_User_to_give_Access__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ContractIntegrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractIntegrator__c</field>
            <operation>equals</operation>
            <value>Citizen Developers - VA Internal teams</value>
        </filters>
        <filters>
            <field>Live_Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </filters>
        <label>Citizen Developed</label>
    </listViews>
    <listViews>
        <fullName>Citizen_Developed_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Live_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Org__c</columns>
        <columns>Deploy_Symbol__c</columns>
        <columns>Deploy_Merge_Branch__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>How_to_Create_User_to_give_Access__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ROI_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractIntegrator__c</field>
            <operation>equals</operation>
            <value>Citizen Developers - VA Internal teams</value>
        </filters>
        <filters>
            <field>Live_Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </filters>
        <label>Citizen Developed In Progress</label>
    </listViews>
    <listViews>
        <fullName>VA_app_Not_Retired</fullName>
        <columns>NAME</columns>
        <columns>Business_Line__c</columns>
        <columns>Business_Line_POC__c</columns>
        <columns>Org__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>ContractIntegrator__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OI_T_PM_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Live_Status__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filters>
        <label>VA APP Not Retired</label>
    </listViews>
    <listViews>
        <fullName>VA_app_View_All</fullName>
        <columns>NAME</columns>
        <columns>Live_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Org__c</columns>
        <columns>Deploy_Symbol__c</columns>
        <columns>Deploy_Merge_Branch__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>How_to_Create_User_to_give_Access__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ROI_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>VA app View All</label>
    </listViews>
</CustomObject>